--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,5 +1,13 @@
 .mainApp h3 {
   text-align: center;
+
+}
+
+.header {
+  position: sticky;
+  top: 0;
+  z-index: 999;
+  background: white;
 }
 
 .addsBlock {
