--- a/src/components/companies.module.css
+++ b/src/components/companies.module.css
@@ -12,7 +12,8 @@
 }
 
 .activeItem input {
-    color: rgb(255, 0, 0);
+    /* color: rgb(255, 0, 0); */
+    color: red
 }
 
 
@@ -37,7 +38,7 @@
     width: 300px;
     text-align: center;
     align-content: center;
- 
+
 }
 
 .headerAdress {
@@ -55,7 +56,7 @@
 }
 
 .headerWName {
-    width: 200px;
+    width: 300px;
     text-align: center;
     align-content: center;
 
@@ -91,13 +92,21 @@
 }
 
 .nameW {
-    width: 200px;
+    width: 300px;
     border: 1px solid black;
+    height: 23px;
 }
 
 .adressW {
     width: 200px;
     border: 1px solid black;
+    height: 23px;
+}
+
+.position {
+    width: 100px;
+    border: 1px solid black;
+    height: 23px;
 }
 
 .workersCountW {
@@ -112,6 +121,6 @@
     margin: 10px;
 }
 
-.toolsBlock input {
+/* .toolsBlock input {
     scale: 1.8;
-}
+} */
